objects/Actuary_Gate__c.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date_Str__c</fullName>
        <formula>LPAD(TEXT(MONTH(Effective_Date__c)), 2, &apos;0&apos;) + &apos;/&apos; + TEXT(YEAR(Effective_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Renewal Eff Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prem</fullName>
                    <default>true</default>
                    <label>PREM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SG</fullName>
                    <default>true</default>
                    <label>SG</label>
                </value>
                <value>
                    <fullName>NRMM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppCount__c</fullName>
        <label>Number of Total Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Gate Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Within4MonthWindow__c</fullName>
        <formula>Effective_Date__c&gt;Today() &amp;&amp; Effective_Date__c-Today()&lt;120</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Within4MonthWindow</label>
        <type>Checkbox</type>
    </fields>
    <label>Gate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Division__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{000}</displayFormat>
        <label>Gate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>